# python_community

./: .gitignore  README.md
grpc-ex/: Makefile  client.py  envoy.yaml  library.pb  library.proto  library_pb2.py  library_pb2_grpc.py  pyproject.toml  readme.md  servicer.py
grpc-ex/books_test_data/: books.csv
grpc-ex/google/api/: annotations.pb  http.pb  httpbody_pb2.py
grpc-ex/google/protobuf/: any.pb  descriptor.pb  duration.pb  empty.pb  struct.pb  timestamp.pb  wrappers.pb
